# nominal-code

./: .dockerignore  .gitignore  404.html  BRANCH_ANALYSIS.md  COST_OPTIMIZATION_PLAN.md  IDEAS.md  LICENSE  MULTITENANCY.md  PLAN-improve-planner-explore.md  README.md  action.yml  index.html  mkdocs.yml  sitemap.xml
app/: .docstring_cache.json  AGENTS.md  check_coverage.py  pyproject.toml
app/nominal_code/: agent_runner.py  bot_type.py  ci.py  cli.py  config.py  git_workspace.py  main.py  models.py  session.py  webhook_server.py  workspace_cleanup.py
app/nominal_code/agent/: AGENTS.md  compaction.py  cost.py  errors.py  invoke.py  memory.py  prompts.py  result.py  router.py  runner.py  sandbox.py  session.py  sub_agent.py  tracking.py  types.py
app/nominal_code/agent/api/: runner.py  tools.py
app/nominal_code/agent/cli/: job.py  runner.py  session.py  tracking.py
app/nominal_code/agent/data/: pricing.json
app/nominal_code/agent/providers/: anthropic.py  base.py  google.py  openai.py  registry.py  types.py
app/nominal_code/agent/sub_agents/: __init__.py  types.py  (+4 more)
app/nominal_code/commands/: ci.py  cli.py  job.py
app/nominal_code/config/: __init__.py  agent.py  env.py  kubernetes.py  loader.py  models.py  policies.py  settings.py
app/nominal_code/conversation/: base.py  memory.py  redis.py
app/nominal_code/handlers/: __init__.py  common.py  diff.py  output.py  review.py  reviewer.py  shared.py  worker.py
app/nominal_code/jobs/: dispatch.py  entrypoint.py  execute.py  handler.py  in_process.py  kubernetes.py  payload.py  process.py  queue.py  redis_queue.py  runner.py  signals.py
app/nominal_code/llm/: anthropic.py  cost.py  google.py  messages.py  openai.py  provider.py  registry.py
app/nominal_code/prompts/: __init__.py  reviewer_prompt.md  reviewer_suggestions.md
app/nominal_code/review/: AGENTS.md  diff.py  handler.py  output.py  prompts.py  reviewer.py
app/nominal_code/server/: app.py  mention.py  router.py
app/nominal_code/webhooks/: AGENTS.md  dispatch.py  mention.py  server.py
app/nominal_code/worker/: AGENTS.md  handler.py
app/nominal_code/workspace/: AGENTS.md  __init__.py  cleanup.py  git.py  setup.py
app/prompts/: coding_guidelines.md  reviewer_prompt.md  system_prompt.md
app/prompts/languages/: python.md
app/prompts/sub_agents/: explore.md  planner.md
app/tests/: test_agent_runner.py  test_bot_type.py  test_ci.py  test_cli.py  test_config.py  test_git_workspace.py  test_http.py  test_main.py  test_mention.py  test_models.py  test_session.py  test_update_pricing.py  test_webhook_server.py  test_workspace_cleanup.py
app/tests/agent/: test_compaction.py  test_cost.py  test_errors.py  test_invoke.py  test_job.py  test_memory.py  test_prompts.py  test_result.py  test_router.py  test_runner.py  test_sandbox.py  test_session.py  test_tracking.py
app/tests/commands/: test_ci.py  test_cli.py  test_job.py
app/tests/config/: test_policies.py
app/tests/conversation/: test_base.py  test_factory.py  test_memory.py  test_redis.py
app/tests/handlers/: test_common.py  test_diff.py  test_output.py  test_review.py  test_reviewer.py  test_shared.py  test_worker.py
app/tests/integration/: conftest.py
app/tests/jobs/: test_dispatch.py  test_entrypoint.py  test_execute.py  test_handler.py  test_in_process.py  test_kubernetes.py  test_payload.py  test_process.py  test_queue.py  test_redis_queue.py  test_signals.py
app/tests/llm/: test_anthropic.py  test_cost.py  test_google.py  test_init.py  test_messages.py  test_openai.py  test_provider.py  test_registry.py
app/tests/review/: test_diff.py  test_handler.py  test_output.py  test_review.py
app/tests/server/: test_app.py  test_mention.py  test_router.py
app/tests/webhooks/: test_dispatch.py  test_mention.py  test_server.py
app/tests/worker/: test_handler.py
app/tests/workspace/: test_cleanup.py  test_git.py  test_git_hardening.py  test_git_pre_cloned.py  test_setup.py
(+191 files in other folders)
