[project]
name = "nominal-code"
version = "0.1.0"
description = "A bot that monitors GitHub PRs and GitLab MRs for review comments, then uses AI agents to respond, review code, and push changes"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.3",
    "anthropic>=0.52.0",
    "claude-agent-sdk==0.1.39",
    "httpx==0.28.1",
    "PyJWT[crypto]>=2.9.0,<3",
    "environs>=14.1,<15",
]

[project.scripts]
nominal-code = "nominal_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nominal_code"]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-aiohttp==1.1.0",
    "ruff==0.15.2",
]

[tool.ruff]
src = ["."]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "D"]
ignore = ["D100", "D104", "D202", "D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: local integration tests (mocked agent, in-process server)",
    "integration_pipeline: integration tests that trigger real CI pipelines",
    "integration_webhook_server: integration tests that use a real tunnel and webhook delivery",
]
addopts = "-m 'not integration and not integration_pipeline and not integration_webhook_server'"
