[project]
name = "nominal-code"
version = "0.1.0"
description = "A bot that monitors GitHub PRs and GitLab MRs for review comments, then uses AI agents to respond, review code, and push changes"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.3",
    "claude-agent-sdk==0.1.48",
    "httpx==0.28.1",
    "PyJWT[crypto]==2.11.0",
    "pydantic==2.12.5",
    "environs==14.6.0",
    "PyYAML==6.0.3",
    "json-repair==0.58.5",
]

[project.optional-dependencies]
anthropic = ["anthropic==0.84.0"]
openai = ["openai==2.26.0"]
google = ["google-genai==1.66.0"]
redis = ["redis==7.3.0"]
all = ["nominal-code[anthropic]", "nominal-code[openai]", "nominal-code[google]", "nominal-code[redis]"]

[project.scripts]
nominal-code = "nominal_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nominal_code"]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-aiohttp==1.1.0",
]
dev = [
    {include-group = "test"},
    "nominal-code[all]",
    "mypy==1.19.1",
    "types-PyYAML==6.0.12.20250915",
    "ruff==0.15.5",
]

[tool.ruff]
src = ["."]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "D"]
ignore = ["D100", "D104", "D202", "D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: local integration tests (mocked agent, in-process server)",
    "integration_pipeline: integration tests that trigger real CI pipelines",
    "integration_webhook_server: integration tests that use a real tunnel and webhook delivery",
    "integration_kubernetes: end-to-end tests against a real minikube cluster",
]
addopts = "-m 'not integration and not integration_pipeline and not integration_webhook_server and not integration_kubernetes'"
